fix: change letter-spacing for subtitle and title

--- a/shelter/assets/scss/_global.scss
+++ b/shelter/assets/scss/_global.scss
@@ -62,6 +62,7 @@ p {
 
     &__logo-subtitle {
         @include font-arial($size: 13px);
+        letter-spacing: 0.1em;
         color: $color-white;
     }
 
